--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 ext.ktor_version = '1.1.4'
@@ -22,6 +23,10 @@ dependencies {
     // Authentication
     implementation "io.ktor:ktor-auth:$ktor_version"
     implementation "io.ktor:ktor-auth-jwt:$ktor_version"
+
+    // Database
+    implementation("org.jetbrains.exposed:exposed:0.15.1")
+    implementation("org.postgresql:postgresql:42.2.5")
 
     // Testing
     testImplementation("io.ktor:ktor-server-test-host:$ktor_version")
