--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.4.21'
+    id 'application'
 }
 
 group 'org.example'
@@ -8,6 +9,20 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
     jcenter()
+}
+
+mainClassName = "MainKt"
+
+jar {
+    manifest {
+        attributes "Main-Class": mainClassName
+    }
+    from {
+        configurations.runtimeClasspath.collect {
+            f -> f.isDirectory() ? f : zipTree(f)
+        }
+    }
+    archiveName "tinderr-app.jar"
 }
 
 ext.ktor_version = '1.1.4'
